--- a/style.css
+++ b/style.css
@@ -1,26 +1,33 @@
+* {
+    box-sizing: border-box;
+}
 .wrapper {
     width: 1000px;
     margin-right: auto;
     margin-left: auto;
 }
+body {
+    margin: 0;
+}
 .content {
     background-color: #C4C4C4;
-    width: 1100px;
+    overflow: hidden
+}
+.float-section {
     margin-top: 50px;
     margin-bottom: 50px;
 }
 .floats, .floats2, .floats3 {
-    background-color: #E6E6E6;
-    margin-top: 50px;
-}
-.floats3 {
-    margin-bottom: 50px;
+    width: 1000px;
+    background: #E6E6E6;
 }
 .float-box1 {
     background-color: #FC8F8F;
     width: 200px;
     height: 200px;
     float: left;
+    padding-top: 62px;
+    padding-bottom: 62px;
     color: white;
     text-align: center;
     font-size: 64px;
@@ -29,59 +36,50 @@
 .float-box1:last-child {
     float: right;
 }
-.clearfix {
-    overflow: hidden;
+.clearfix::after {
+    content:'';
+    display: block;
     clear: both;
 }
-.float-box2:first-child {
-    background-color: #FC8F8F;
-    width: 200px;
-    height: 200px;
-    float: left;
-    color: white;
-    text-align: center;
-    font-size: 64px;
-    font-weight: 700;
-    margin-left: 0;
-}
-.float-box2 {
+.float-box2, .float-box2-left {
     background-color: #FC8F8F;
     width: 100px;
     height: 100px;
-    float: right;
-    color: white;
-    text-align: center;
-    font-size: 64px;
-    font-weight: 700;
-    margin-left: 15px;
-}
-.float-box2:last-child {
-    margin-left: 0;
-}
-.float-box3, .float-box4 {
-    background-color: #FC8F8F;
-    width: 200px;
-    height: 200px;
     float: left;
-    color: white;
-    text-align: center;
-    font-size: 64px;
-    font-weight: 700;
-}
-.float-box4 {
-    margin-left: 15px;
-}
-.float-box5, .float-box6 {
-    background-color: #FC8F8F;
-    width: 200px;
-    height: 200px;
-    float: right;
+    padding-top: 31px;
+    padding-bottom: 31px;
     color: white;
     text-align: center;
     font-size: 64px;
     font-weight: 700;
     margin-right: 15px;
 }
-.float-box6 {
+.float-box2-left {
+    width: 200px;
+    height: 200px;
+}
+.float-box2:last-child {
+    margin-right: 0;
+}
+.left {
+    float: left;
+}
+.right {
+    float: right;
+}
+.float-box3 {
+    background-color: #FC8F8F;
+    width: 200px;
+    height: 200px;
+    float: left;
+    padding-top: 62px;
+    padding-bottom: 62px;
+    color: white;
+    text-align: center;
+    font-size: 64px;
+    font-weight: 700;
+    margin-right: 15px;
+}
+.float-box3:last-child {
     margin-right: 0;
 }
