--- a/style.css
+++ b/style.css
@@ -11,14 +11,15 @@ body {
 }
 .content {
     background-color: #C4C4C4;
-    overflow: hidden
+    overflow: hidden;
+    margin-right: auto;
+    margin-left: auto;
 }
 .float-section {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .floats, .floats2, .floats3 {
-    width: 1000px;
     background: #E6E6E6;
 }
 .float-box1 {
